Enhance admin navigation: add responsive layout and smooth display transitions for admin controls

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
           <li><a href="/contact.html">Contact</a></li>
           <li><a href="/notices.html">Notices</a></li>
           <li><a href="/faq.html">FAQ</a></li>
-          <li id="admin-nav" style="display: none;"><a href="/admin.html" class="btn btn-admin">Admin</a></li>
-          <li id="logout-nav" style="display: none;"><button class="btn btn-logout" id="logoutBtn">Logout</button></li>
+          <li class="nav-admin-group">
+            <a href="/admin.html" class="btn btn-admin" id="admin-nav" style="display: none;">Admin Panel</a>
+            <button class="btn btn-logout" id="logoutBtn" style="display: none;">Logout</button>
+          </li>
         </ul>
       </nav>
     </div>
